# extension-explorer

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  CNAME  Procfile  README.md  _headers  biome.json  build_theme.sh  conftest.py  data.json  extensions.json  freeze.py  index.html  pa11y.default.js  pa11y.default.json  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg  setup.py  theme_test.html  travis.yml  wireframe.html
.github/workflows/: a11y.yml  ci.yml  deploy.yml  i18n.yml  lint.yml
en/: index.html
en/documentation/: index.html
en/extensions/: index.html
en/publishers/: index.html
en/users/: index.html
es/: index.html
es/documentation/: index.html
es/extensions/: index.html
es/publishers/: index.html
es/users/: index.html
extension_explorer/: __init__.py  babel.cfg  compat.py  extension_data.py  extract.py  local_data.json  messages.pot  util.py  views.py
extension_explorer/.tx/: config
extension_explorer/data/: tags.yaml
extension_explorer/static/: example-release-package.json  theme.css
extension_explorer/templates/: _logo.html  base.html  collection.html  collections.html  community.html  core.html  documentation.html  extension.html  extension_codelists.html  extension_docs.html  extension_documentation.html  extension_info.html  extension_schema.html  extensions.html  home.html  layout.html  layout_extension.html  publisher_guidance.html  publishers.html  redirect.html  schema_reference.html  theme_test.html  user_guidance.html  users.html
static/: example-release-package.json
static/css/: theme.css
static/js/: main.js
tests/: __init__.py  test_compat.py  test_extract.py  test_functional.py  test_util.py  test_views.py
tests/fixtures/: data.json  (+2 more)
wireframes/: core_0.html  core_extension_0.html  core_extension_1.html  home_0.html
(+1336 files in other folders)
