[project]
name = "ocdsextensionexplorer"
version = "0.0.0"

[project.entry-points."babel.extractors"]
tag = "extension_explorer.extract:extract_tag"

[tool.setuptools]
packages = ["extension_explorer"]

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = ["E", "C4", "F", "I", "W"]
