[project]
name = "ocdsextensionexplorer"
version = "0.0.0"

[project.entry-points."babel.extractors"]
tag = "extension_explorer.extract:extract_tag"

[tool.setuptools]
packages = ["extension_explorer"]

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = ["E", "C4", "F", "I", "W"]

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"

[[tool.babel.mappings]]
method = "jinja2"
pattern = "**/templates/**.html"

[[tool.babel.mappings]]
method = "tag"
pattern = "**.yaml"
