[project]
name = "ocdsextensionexplorer"
version = "0.0.0"

[project.entry-points."babel.extractors"]
tag = "extension_explorer.extract:extract_tag"

[tool.setuptools]
packages = ["extension_explorer"]

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "C901", "COM812", "D203", "D212", "D415", "EM", "ISC001", "PERF203", "PLR091", "Q000",
    "D1", "D205",
    "PTH",
    "FIX002",  # todo
]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ARG001", "D", "FBT003", "INP001", "PLR2004", "S", "TRY003",
]
"*/extract.py" = ["ARG001"]  # babel
"*/views.py" = ["ARG001"]  # flask

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"

[[tool.babel.mappings]]
method = "jinja2"
pattern = "**/templates/**.html"

[[tool.babel.mappings]]
method = "tag"
pattern = "**.yaml"
